# ASM2010

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  compile_flags.txt  meson.build  meson.options
cmake/Platform/: WASI.cmake
etc/: iup.manifest
etc/logisim/: CS2010 IO extended.circ  CS2010's UC design.ods  CS2010.circ  README.md
etc/toolchains/: i686-win32-clang.ini  wasm32-wasi-clang.ini  x86_64-win32-clang.ini
etc/win32/: asm2010.manifest
examples/: counting.asm  error.asm  max.asm  multiplication.asm  shift_left.asm  test.asm
examples/IO/: 7segments.asm  button_codes.asm  dec_keyboard.asm  hex_counter.asm  matrix.asm  random_buttons.asm
examples/asm/: counting.asm  error.asm  io-buttons.asm  io-keyboard.asm  io-random.asm
examples/asm/cs2010/: io-hexdisplay.asm  io-random.asm  multiplication.asm  shift_left.asm
examples/asm/cs3/: counting.asm  error.asm  io-buttons.asm  io-hexdisplay.asm  io-keyboard.asm  io-random.asm  max.asm
include/: asm2010.h
include/cd/: cd_private.h  cdlua5_private.h
include/tinycthread/: tinycthread.c  tinycthread.h
lib32/win32/: cd.lib  msvcrt.lib  zlib1.lib
lib64/win32/: msvcrt.lib
logisim/: CS2010 IO extended.circ  CS2010's UC design.ods  CS2010.circ  README.md
src/: about.h  export.c  export.h  file.c  file.h  hash_table.c  hash_table.h  instructions.c  instructions.h  mcs.c  mcs.h  parse.c  parse.h  trace_log.c  trace_log.h  utils.c  utils.h  wasm_glue.c
src/as/: as_cli.c  as_gui.c  as_parse.c  as_parse.h
src/as2010/: as2010.c  as2010_gui.c  as2010_parse.c  as2010_parse.h  as_parse.c  as_parse.h
src/as_parse/: as_disassemble.c  as_disassemble.h  as_parse.c  as_parse.h
src/cli/: cli.c  cli.h
src/cs2010/: cs2010.c  cs2010.h  cs_instructions.c  cs_instructions.h  cs_memory.h  cs_op.c  cs_op.h  cs_registers.h
src/gui/: gui.c  gui.h
src/m2010/: cs.c  cs.h  cs_instructions.c  cs_instructions.h  cs_io.c  cs_memory.h  cs_opcodes.c  cs_opcodes.h  cs_platforms.h  cs_registers.h  cs_signals.h  m2010.c
src/m2010/comp/: m_ramgrid.c  m_ramgrid.h  m_reggrid.c  m_reggrid.h  m_register.h  m_registers.c  m_registers.h  m_romgrid.c  m_romgrid.h  m_siggrid.c  m_siggrid.h
src/m2010/cs2010/: cs2010_opcodes.c  cs2010_opcodes.h  cs2010_platform.c  cs2010_platform.h  cs2010_signals.h
src/m2010/cs3/: cs3_opcodes.c  cs3_opcodes.h  cs3_platform.c  cs3_platform.h  cs3_registers.h  cs3_signals.h
